--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Questionnaire Form</title>
+    <link rel="icon" type="image/png" href="images/favicon.png">
 
     <link rel="stylesheet" href="index.css">
     <!-- Import Inter font from Google Fonts -->
@@ -68,7 +69,7 @@
                     <div class="form-question">
                         <label for="name">Please enter your student number.<span class="required">*</span></label>
                     </div>
-                    <input type="text" id="student-number" class="form-input" placeholder="Your student number">
+                    <input type="number" id="student-number" class="form-input" placeholder="Your student number">
                     <div class="error-message">Please enter your student number.</div>
                 </div>
 
@@ -197,7 +198,7 @@
 
         <div class="thank-you" id="thank-you-message">
             <h2>Thank you for your submission!</h2>
-            <p>We've received your questionnaire responses and will get back to you shortly.</p>
+            <p>We've received your questionnaire responses. Your response is considered a step forward to improve our services within the university.</p>
         </div>
 
         <div class="privacy-notice">
