--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <input type="text" id="name" class="form-input" placeholder="Your full name">
                     <div class="error-message">Please enter your name</div>
                 </div>
-                <div class="form-item" id="name-item">
+                <div class="form-item" id="student-number-item">
                     <div class="form-question">
                         <label for="name">Please enter your student number.<span class="required">*</span></label>
                     </div>
