--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 <div class="form-item" id="problems-item">
                     <div class="form-question">
-                        <label for="problems">5. What are the most common problems or frustrations you face on campus?<span class="required">*</span></label>
+                        <label for="problems">5. What are the most common problems or frustrations you face on campus? <span style="color: red;">Please focus on technology related issues. </span><span class="required">*</span></label>
                     </div>
                     <textarea id="problems" class="form-input" placeholder="Share your experiences..."></textarea>
                     <div class="error-message">Please describe the problems or frustrations</div>
