--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <label for="year-3" class="radio-label">3rd Year</label>
                         </div>
                         <div class="radio-option">
-                            <input type="radio" id="year-4-plus" name="year" value="4th Year or above">
+                            <input type="radio" id="year-4-plus" name="year" value="Advanced programm or above">
                             <label for="year-4-plus" class="radio-label">Advanced programm or above</label>
                         </div>
                     </div>
