--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
         <div class="header">
             <h1>WSU Campus Life & Technology Use – Student Questionnaire</h1>
-            <h2>Purpose: We're exploring ways to improve student life at Walter Sisulu University through a new digital solution. Your honest responses will help guide our design and development.</h2>
+            <h2>Purpose: We're exploring ways to improve student life at Walter Sisulu University through a new digital solution.The issues that we are looking for can be addressed using apps or websites. Your honest responses will help guide our design and development.</h2>
             <p>Time: 3–5 minutes. Answers can be anonymous.</p>
         </div>
 
@@ -145,7 +145,7 @@
 
                 <div class="form-item" id="problems-item">
                     <div class="form-question">
-                        <label for="problems">5. What are the most common problems or frustrations you face on campus? <span style="color: red;">Please focus on technology related issues that can be addresed using applications or website. </span><span class="required">*</span></label>
+                        <label for="problems">5. What are the most common problems or frustrations you face on campus? <span style="color: red;">Please focus on technology related issues that can be addressed using applications or website. </span><span class="required">*</span></label>
                     </div>
                     <textarea id="problems" class="form-input" placeholder="Share your experiences..."></textarea>
                     <div class="error-message">Please describe the problems or frustrations</div>
